--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "bootstrap": "^5.1.3",
+    "animate.css": "^4.1.1",
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "nodemon": "^2.0.19",
     "rxjs": "~7.5.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
